inclusion of photo and captions

--- a/climate-crisis-story/index.html
+++ b/climate-crisis-story/index.html
@@ -72,9 +72,9 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
         </div>
 
         <figure>
-          <img src="JusticeGeorgie.jpg" alt="street with limited shading" class="center" width="900" height="600">
-          <figcaption>Shade is one of the only ways for many McElderry Park residents to avoid the extreme summer heat, but the neighborhood doesn’t
-            have enough mature trees to cool its streets and homes. (Photo by Justice Georgie | Wide Angle Youth Media)</figcaption>
+          <img src="JusticeGeorgie.jpg" alt="street with limited shading" class="center" width="975" height="600">
+          <figcaption><b>Shade is one of the only ways for many McElderry Park residents to avoid the extreme summer heat, but the neighborhood doesn’t
+            have enough mature trees to cool its streets and homes. <em>(Photo by Justice Georgie | Wide Angle Youth Media)</b></em></figcaption>
         </figure>
 
 
@@ -105,7 +105,13 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
 
           <p>More and more people, including Del. Robbyn Lewis, who represents parts of East Baltimore, are replacing the words “climate change” with stronger language.<br></p>
 
-      <h2>Urban Heat Islands</h2>
+    <h2>Urban Heat Islands</h2><br>
+
+        <figure>
+          <img src="amazing-grace-garden.jpg" alt="amazing grace garden entrance" class="center" width="975" height="600">
+          <figcaption><b>The garden entrance at Amazing Grace Evangelical Lutheran Church is one of the few green spaces in the McElderry Park neighborhood.
+            <em>(Photo by Ian Round | University of Maryland)</b></em></figcaption>
+        </figure>
 
           <p>Cities, crowded and paved over, already feel the impact of climate change, with poorer air quality and streets, highways and bridges damaged by storms. But certain neighborhoods
             will continue to feel the effects of extreme temperatures more than others.<br></p>
@@ -173,7 +179,7 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
 
           <p>Today, Simmons said, many of his old neighbors have died. Only about four people remain from the group of homeowners his mother met when she moved to McElderry Park in the 1980s.<br></p>
 
-          <p>“Pride is gone,” he said.<br><br></p>
+          <p>“Pride is gone,” he said.<br></p>
 
           <p>He will not put an air-conditioning unit in a first-floor window facing the street “because of security.” He has air conditioning in his bedroom, but he’s mindful that using it costs money.<br></p>
 
