--- a/climate-crisis-story/index.html
+++ b/climate-crisis-story/index.html
@@ -171,7 +171,12 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
 
           <p>But many East Baltimoreans said during the heat wave that they weren’t aware of any of City Hall’s plans or warnings. Many said they didn’t know cooling centers existed. They never looked at the website.<br></p>
 
-    <h2>Security Concerns</h2>
+    <h2>Security Concerns</h2><br>
+
+        <figure>
+          <img src="SolomonSimmons.jpg" alt="Solomon Simmons pictured in his home" class="center" width="975" height="600">
+          <figcaption><b>Solomon Simmons in his East Baltimore home <em> (Photo by Amina Lampkin | University of Maryland)</b></em></figcaption>
+        </figure>
 
           <p>Solomon Simmons, 70, and his neighbor Harriett Alexander said McElderry Park used to be more tightknit — “like a village,” Simmons said.<br></p>
 
