updated photo and caption

--- a/climate-crisis-story/index.html
+++ b/climate-crisis-story/index.html
@@ -258,7 +258,13 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
 
           <p>At the end of July, Scott released an agenda with 26 priorities for the coming council year. Climate change was not among them.<br></p>
 
-    <h2>Rowhouses in the heat</h2>
+    <h2>Rowhouses in the heat</h2><br>
+
+      <figure>
+        <img src="melissacandy.jpg" alt="Melissa Candy pictured outside" class="center" width="975" height="600">
+        <figcaption><b>Melissa Canady says that the concrete block walls in her backyard prevent the flow of air and trap heat behind her house.<em>
+          (Photo by Maris Medina | University of Maryland)</b></em></figcaption>
+      </figure>
 
           <p>Rowhouses efficiently conserve heat — which is welcome in the winter, a problem in the summer.<br></p>
 
