--- a/climate-crisis-story/index.html
+++ b/climate-crisis-story/index.html
@@ -175,7 +175,7 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
 
         <figure>
           <img src="SolomonSimmons.jpg" alt="Solomon Simmons pictured in his home" class="center" width="975" height="600">
-          <figcaption><b>Solomon Simmons in his East Baltimore home <em> (Photo by Amina Lampkin | University of Maryland)</b></em></figcaption>
+          <figcaption><b>Solomon Simmons in his East Baltimore home. <em> (Photo by Amina Lampkin | University of Maryland)</b></em></figcaption>
         </figure>
 
           <p>Solomon Simmons, 70, and his neighbor Harriett Alexander said McElderry Park used to be more tightknit — “like a village,” Simmons said.<br></p>
