--- a/climate-crisis-story/index.html
+++ b/climate-crisis-story/index.html
@@ -66,6 +66,26 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
 
     <div id="container">
 
+      <!-- Side navigation -->
+        <div class="sidenav">
+
+          <h3>State of the Climate 2018</h3>
+            <p>The American Meteorological Society releases a State of the Climate report each summer summarizing data collected
+              by global environmental monitoring stations around the world. In 2018, here were five key findings.</p>
+
+            <ul>
+              <li>2018 was the fourth warmest year, behind only 2016, 2015 and 2017. Since the start of the 21st Century, every
+                year has been hotter than the global average temperature recorded from 1981 to 2010.</li>
+              <li>Glaciers have continued to melt for the 30th year in a row. In 2018, approximately one meter of ice melted off the top of the average glacier.</li>
+              <li>Sea levels rose for the seventh year in a row. The annual mean sea level is the highest it’s been in 26 years.</li>
+              <li>Sea levels rose for the seventh year in a row. The annual mean sea level is the highest it’s been in 26 years.</li>
+              <li>The global average carbon dioxide concentration at Earth’s surface is the highest ever recorded according to data that goes back 800,000 years.
+                Carbon dioxide, methane and nitrous oxide released in the atmosphere continue to increase.</li>
+              <li>Arctic air temperatures rose at twice the rate of the rest of the Earth with the five past years’ Arctic temperatures surpassing records since 1900.</li>
+            </ul>
+
+        </div>
+
       <h1>In Baltimore, the burden of rising temperatures isn’t shared</h1>
         <div class="description">
           <p><i>In urban heat islands, climate crisis hits harder</i></p>
@@ -160,6 +180,10 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
             Those sensors recorded temperatures that reached as high as 97 degrees and heat index values of 119 degrees.<br></p>
 
           <p>In some homes, those readings showed that it was hotter inside than outside.<br></p>
+
+            <figure>
+              <img src="IndoorAndOutdoorHeatIndexes.png" alt="line chart of differing heat indexes" class="center" width="850" height="650">
+            </figure>
 
           <p>On the first floor of Tammy Jackson’s two-story rowhouse, the heat index registered 93 degrees at 10 p.m. on Sunday, July 21. Outside, the heat index was 9 degrees lower, 84 degrees.<br></p>
 
