--- a/climate-crisis-story/index.html
+++ b/climate-crisis-story/index.html
@@ -66,26 +66,6 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
 
     <div id="container">
 
-      <!-- Side navigation -->
-        <div class="sidenav">
-
-          <h3>State of the Climate 2018</h3>
-            <p>The American Meteorological Society releases a State of the Climate report each summer summarizing data collected
-              by global environmental monitoring stations around the world. In 2018, here were five key findings.</p>
-
-            <ul>
-              <li>2018 was the fourth warmest year, behind only 2016, 2015 and 2017. Since the start of the 21st Century, every
-                year has been hotter than the global average temperature recorded from 1981 to 2010.</li>
-              <li>Glaciers have continued to melt for the 30th year in a row. In 2018, approximately one meter of ice melted off the top of the average glacier.</li>
-              <li>Sea levels rose for the seventh year in a row. The annual mean sea level is the highest it’s been in 26 years.</li>
-              <li>Sea levels rose for the seventh year in a row. The annual mean sea level is the highest it’s been in 26 years.</li>
-              <li>The global average carbon dioxide concentration at Earth’s surface is the highest ever recorded according to data that goes back 800,000 years.
-                Carbon dioxide, methane and nitrous oxide released in the atmosphere continue to increase.</li>
-              <li>Arctic air temperatures rose at twice the rate of the rest of the Earth with the five past years’ Arctic temperatures surpassing records since 1900.</li>
-            </ul>
-
-        </div>
-
       <h1>In Baltimore, the burden of rising temperatures isn’t shared</h1>
         <div class="description">
           <p><i>In urban heat islands, climate crisis hits harder</i></p>
@@ -140,6 +120,8 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
             surrounding neighborhoods can run 8 degrees hotter than in communities that have more trees and less pavement.<br></p>
 
           <p>McElderry Park, which despite its lyrical name offers little green space, is one of these: the hottest neighborhood in Baltimore, a city whose climate has long been classified as humid subtropical.<br></p>
+
+          <iframe src="//datawrapper.dwcdn.net/JL5jA/2/" frameborder="0" allowtransparency="true" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen width="600" height="500"></iframe>
 
           <p>Residents in the hottest areas have higher rates of chronic illnesses affected by heat, including asthma and COPD. In hot weather, emergency medical calls for some chronic conditions increase. The rate of
             emergency medical calls for cardiac arrest and congestive heart failure, for example, nearly double when the heat index hits 103 degrees.<br></p>
