--- a/climate-crisis-story/index.html
+++ b/climate-crisis-story/index.html
@@ -121,7 +121,9 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
 
           <p>McElderry Park, which despite its lyrical name offers little green space, is one of these: the hottest neighborhood in Baltimore, a city whose climate has long been classified as humid subtropical.<br></p>
 
-          <iframe src="//datawrapper.dwcdn.net/JL5jA/2/" frameborder="0" allowtransparency="true" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen width="600" height="500"></iframe>
+            <figure>
+              <img src="HeatRelatedDeaths.png" alt="bar chart showing heat related deaths" class="center" width="700" height="700">
+            </figure>
 
           <p>Residents in the hottest areas have higher rates of chronic illnesses affected by heat, including asthma and COPD. In hot weather, emergency medical calls for some chronic conditions increase. The rate of
             emergency medical calls for cardiac arrest and congestive heart failure, for example, nearly double when the heat index hits 103 degrees.<br></p>
