--- a/climate-crisis-story/index.html
+++ b/climate-crisis-story/index.html
@@ -135,6 +135,11 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
           <p>This is true across the United States. In a majority of the country's most populous cities, people with lower incomes typically lived in the hottest areas, an investigation by
             journalists from NPR and the University of Maryland found.<br></p>
 
+            <font size="+2"><blockquote>
+                “Environmental justice and climate change are inextricably linked.”
+                - Sacoby Wilson, University of Maryland public health professor
+            </blockquote></font>
+
           <p>In short, as the planet warms, the urban poor in dozens of large U.S. cities will actually experience more heat than the wealthy, simply by virtue of where they live.<br></p>
 
           <p>Sacoby Wilson, who studies applied environmental health as an associate professor at the University of Maryland School of Public Health, said people in low-income neighborhoods walk more, ride more
