update pull quote

--- a/climate-crisis-story/index.html
+++ b/climate-crisis-story/index.html
@@ -136,7 +136,7 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
             journalists from NPR and the University of Maryland found.<br></p>
 
             <font size="+2"><blockquote>
-                “Environmental justice and climate change are inextricably linked.”
+                “<b>E</b>nvironmental justice and climate change are inextricably linked.”
                 - Sacoby Wilson, University of Maryland public health professor
             </blockquote></font>
 
