--- a/climate-crisis-story/index.html
+++ b/climate-crisis-story/index.html
@@ -21,39 +21,10 @@
   <body>
   <!-- NavBar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">Heat and Inequality</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
-      <div class= "collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class= "navbar-nav mr-auto">
-          <li class= "nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action One</a>
-          <a class="dropdown-item" href="#">Action Two</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Additional Actions</a>
-      </div>
-          </li>
-          <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
-        </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
 </nav>
 
 <!--  jQuery, Popper and Bootstrap -->
@@ -65,6 +36,35 @@ integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b
 integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     <div id="container">
+
+
+    <div class="header"></div>
+      <input type="checkbox" class="openSidebarMenu" id="openSidebarMenu">
+      <label for="openSidebarMenu" class="sidebarIconToggle">
+    <div class="spinner diagonal part-1"></div>
+    <div class="spinner horizontal"></div>
+    <div class="spinner diagonal part-2"></div>
+      </label>
+    <div id="sidebarMenu">
+      <p><b>State of the Climate 2018</b></p><br>
+        <p>The American Meteorological Society releases a State of the Climate report each summer summarizing
+          data collected by global environmental monitoring stations around the world.
+          In 2018, here were five key findings:</p>
+      <ul class="sidebarMenuInner">
+        <li><b>2018 was the fourth warmest year,</b> behind only 2016, 2015 and 2017. Since the start of the
+          21st Century, every year has been hotter than the global average temperature recorded from 1981 to 2010.</li>
+        <li><b>Glaciers have continued to melt for the 30th year in a row.</b> In 2018, approximately one meter of ice
+          melted off the top of the average glacier.</li>
+        <li><b>Sea levels rose for the seventh year in a row.</b> The annual mean sea level is the highest it’s been in 26 years.</li>
+        <li><b>The global average carbon dioxide concentration at Earth’s surface is the highest ever recorded</b> according to data that
+          goes back 800,000 years. Carbon dioxide, methane and nitrous oxide released in the atmosphere continue to increase.</li>
+        <li><b>Arctic air temperatures rose at twice the rate of the rest of the Earth</b> with the five past years’ Arctic temperatures
+          surpassing records since 1900.</li>
+      </ul>
+      <p>Source: American Meteorological Society's <a href="https://www.ametsoc.org/ams/index.cfm/publications/bulletin-of-the-american-meteorological-society-bams/state-of-the-climate/">The State of the Climate in 2018</a>
+      </p>
+
+    </div>
 
       <h1>In Baltimore, the burden of rising temperatures isn’t shared</h1>
         <div class="description">
@@ -136,7 +136,7 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
             journalists from NPR and the University of Maryland found.<br></p>
 
             <font size="+2"><blockquote>
-                “<b>E</b>nvironmental justice and climate change are inextricably linked.”
+                “<font size="+4"><b>E</b></font>nvironmental justice and climate change are inextricably linked.”
                 - Sacoby Wilson, University of Maryland public health professor
             </blockquote></font>
 
@@ -216,6 +216,11 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
           <p>Tammy Jackson, who has asthma, said she had to stop cooking dinner one July evening when the heat made it hard for her to breathe. The next day, she told her husband, “Baby, I can’t cook until I get AC.”<br></p>
 
           <p>Even if someone from McElderry Park decided to find a cooling center, some centers were closed on the weekend. The closest center open Saturday and Sunday was about a mile away — a long walk for the young or the old in 100-degree heat.<br></p>
+
+            <font size="+2"><blockquote>
+              “<font size="+4"><b>W</b></font>e wouldn’t need cooling centers if we had healthy neighborhoods.”
+              - Del. Robbyn Lewis of East Baltimore
+            </blockquote></font>
 
           <p>Jennifer Martin, Baltimore's deputy health commissioner for population health and disease prevention, said she was “sad and surprised” to hear so many people were unaware of the cooling centers.<br></p>
 
