--- a/climate-crisis-story/index.html
+++ b/climate-crisis-story/index.html
@@ -315,7 +315,8 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
           <p><i>Jake Gluck, Jane Gerard, Roxanne Ready, Theresa Diffendal and Sean Mussenden of the University of Maryland contributed to this story. Additional information was also provided by Sean McMinn, Meg Anderson and Nora Eckert of NPR.<br></i></p>
 
       <footer>
-        <p>Footer Text</p>
+        <p>Capital News Service, University of Maryland</p>
+        <p>2021</p>
       </footer>
 
     </div>
