--- a/climate-crisis-story/index.html
+++ b/climate-crisis-story/index.html
@@ -99,6 +99,8 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
           <p>In July, Anchorage, Alaska, recorded 90 degrees for the first time. Europe suffered through record temperatures, with Paris hitting 109. The heat moved across Scandinavia and into Greenland,
             where scientists said it speeded the melting of Arctic ice that would increase flooding in coastal cities — including Baltimore.<br></p>
 
+          <iframe src="https://uploads.knightlab.com/storymapjs/126acb1e23b8e79dcdca344f8034e818/climate-crisis-storymap-master/index.html" frameborder="0" width="100%" height="800"></iframe>
+
           <p>Average annual temperatures in Baltimore have gone up more than 3 degrees over the last century, nearly twice as much as the rest of the country.<br></p>
 
           <p>And the planet’s warming has gained momentum, say researchers who estimate the number of very hot days in Baltimore could increase six-fold by the middle of the century.<br></p>
@@ -142,6 +144,8 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
 
           <p>In short, as the planet warms, the urban poor in dozens of large U.S. cities will actually experience more heat than the wealthy, simply by virtue of where they live.<br></p>
 
+          <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=100Js25O6M0Grh3QSLpefyct9RUeCffh8XN40dzy5ux0&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
+
           <p>Sacoby Wilson, who studies applied environmental health as an associate professor at the University of Maryland School of Public Health, said people in low-income neighborhoods walk more, ride more
             buses and drive fewer cars — so they contribute less to climate change. And yet they are more vulnerable to dying in extreme heat.<br></p>
 
@@ -171,7 +175,7 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
           <p>In some homes, those readings showed that it was hotter inside than outside.<br></p>
 
             <figure>
-              <img src="IndoorAndOutdoorHeatIndexes.png" alt="line chart of differing heat indexes" class="center" width="850" height="650">
+              <img src="IndoorOutdoorHeatIndex.png" alt="line chart of differing heat indexes" class="center" width="850" height="650">
             </figure>
 
           <p>On the first floor of Tammy Jackson’s two-story rowhouse, the heat index registered 93 degrees at 10 p.m. on Sunday, July 21. Outside, the heat index was 9 degrees lower, 84 degrees.<br></p>
