--- a/data-viz-project/index.html
+++ b/data-viz-project/index.html
@@ -17,3 +17,13 @@
     <!-- stylesheet CSS -->
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
+
+  <body>
+  <!-- NavBar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">VANITY FAIR -- COLUMNS</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </nav>
+  </body>
