--- a/data-viz-project/index.html
+++ b/data-viz-project/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Bootstrap Template</title>
+    <title>Final Project</title>
     <meta name="description" content="JOUR 352 HTML Frame">
     <meta name="author" content="Joy Saha">
 
@@ -36,6 +36,8 @@
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
       <div id="container">
+
+        <h1>THE SUSPECTS WORE LOUBOUTINS</h1>
 
 
 
