story text and hero image

--- a/data-viz-project/index.html
+++ b/data-viz-project/index.html
@@ -37,7 +37,18 @@
 
       <div id="container">
 
+        <div class="hero-image">
+          <div class="hero-text">
+            <h1>THE SUSPECTS WORE LOUBOUTINS</h1>
+              <button>Read More</button>
+          </div>
+        </div>
+
         <h1>THE SUSPECTS WORE LOUBOUTINS</h1>
+        
+          <div class="description">
+            <p>The most audacious burglary gang in recent Hollywood history—accused of stealing more than $3 million in clothing and jewelry from Paris Hilton, Lindsay Lohan, and other stars—appears to be a bunch of club-hopping Valley kids, motivated by vanity and celebrity-worship.</p>
+          </div>
 
         <div class="byline">
           BY: NANCY JO SALES
@@ -207,7 +218,7 @@
 
         <p>Lee returned to L.A. from Vegas and, on the night of August 23, Prugo, Lee, and Tamayo allegedly burglarized Lohan’s Spanish-style home in the Hollywood Hills of close to $130,000 in clothes and jewelry. Lee and Tamayo were, “like, freaking out over Lindsay’s stuff,” Prugo said. “I didn’t even want to go to Lindsay’s, because I had a feeling if anything was taken,” in the way of surveillance videos, “it would be released.”</p><br>
 
-        <p>It was. On August 26, the L.A.P.D.— with Lohan’s permission—released her surveillance video to TMZ. Now there were two videos circulating (Lohan’s and Patridge’s), making it all but plain to see that they had captured images of the same people, and that there was a connection between the Hollywood Hills burglaries. Tips started pouring in as to the thieves’ identities. But police were already moving on information they had received from someone who said she overheard Lee and Prugo bragging of their exploits at a party. Cops used Facebook to ascertain that Lee and Prugo were “friends” with each other</p><br>
+        <p>It was. On August 26, the L.A.P.D.— with Lohan’s permission—released her surveillance video to TMZ. Now there were two videos circulating (Lohan’s and Patridge’s), making it all but plain to see that they had captured images of the same people, and that there was a connection between the Hollywood Hills burglaries. Tips started pouring in as to the thieves’ identities. But police were already moving on information they had received from someone who said she overheard Lee and Prugo bragging of their exploits at a party. Cops used Facebook to ascertain that Lee and Prugo were “friends” with each other.</p><br>
 
         <p>On October 22, two weeks after Prugo confessed, the L.A.P.D. was issued search warrants for Ajar, Tamayo, Ames, Neiers, Lopez, and Lee. They found Lee at her father’s Las Vegas home. “During the warrant service,” says the L.A.P.D. report, “Lee asked several officers if they would release her if she told them where ‘everything is.’ ”</p><br>
 
@@ -230,8 +241,6 @@
         <p>“I’m just really trying to make whatever amends I can, especially to these celebrities that I victimized,” he said. “I really want them to know that I’m sorry. I’m not really sure how I’m going to do that yet. But I really plan on making some formal apology to them. I don’t know how they’ll react. I mean, to have someone in your house, where it’s your most personal of sanctuaries... ” He seemed at a loss for words.</p><br>
 
         <p>He was wearing a pair of good-looking shoes, shiny black sneakers. I asked him where he got them. “A thrift store,” he said ruefully. “Thirteen bucks.”</p><br>
-
-
 
 
       </div>
