hero image and navbar

--- a/data-viz-project/index.html
+++ b/data-viz-project/index.html
@@ -19,7 +19,15 @@
   </head>
 
   <body>
-  
+
+    <!-- NavBar -->
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">VANITY FAIR: COLUMNS</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+      </nav>
+
     <!--  jQuery, Popper and Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -33,7 +41,6 @@
         <div class="hero-image">
           <div class="hero-text">
             <h1>THE SUSPECTS WORE LOUBOUTINS</h1>
-              <button>Read More</button>
           </div>
         </div>
 
