--- a/data-viz-project/index.html
+++ b/data-viz-project/index.html
@@ -21,10 +21,17 @@
   <body>
 
     <!-- NavBar -->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">VANITY FAIR: COLUMNS</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
+            <ul>
+              <li class="active"><a href="#">ISSUES</a></li>
+              <li><a href="#">ENTERTAINMENT</a></li>
+              <li><a href="#">ARTS</a></li>
+              <li><a href="#">CULTURE</a></li>
+              <li><a href="#">POLITICS</a></li>
+            </ul>
           </button>
       </nav>
 
