--- a/data-viz-project/index.html
+++ b/data-viz-project/index.html
@@ -23,9 +23,9 @@
     <!-- NavBar -->
     <div class="topnav">
       <a class="active" href="#home">VANITY FAIR: COLUMNS</a>
-      <a href="#arts">ARTS</a>
-      <a href="#culture">CULTURE</a>
-      <a href="#politics">POLITICS</a>
+      <a href="#arts"><i>ARTS</a></i>
+      <a href="#culture"><i>CULTURE</a></i>
+      <a href="#politics"><i>POLITICS</a></i>
     </div>
 
     <!--  jQuery, Popper and Bootstrap -->
@@ -47,7 +47,7 @@
         <h1>THE SUSPECTS WORE LOUBOUTINS</h1>
 
           <div class="description">
-            <p>The most audacious burglary gang in recent Hollywood history—accused of stealing more than $3 million in clothing and jewelry from Paris Hilton, Lindsay Lohan, and other stars—appears to be a bunch of club-hopping Valley kids, motivated by vanity and celebrity-worship.</p>
+            <p><b>The most audacious burglary gang in recent Hollywood history—accused of stealing more than $3 million in clothing and jewelry from Paris Hilton, Lindsay Lohan, and other stars—appears to be a bunch of club-hopping Valley kids, motivated by vanity and celebrity-worship.</p></b>
           </div>
 
         <div class="byline">
