html update with page topper

--- a/data-viz-project/index.html
+++ b/data-viz-project/index.html
@@ -22,7 +22,7 @@
 
     <!-- NavBar -->
     <div class="topnav">
-      <a class="active" href="#home">VANITY FAIR: COLUMNS</a>
+      <a class="active" href="#home"><b><i>VANITY FAIR: COLUMNS</a></i></b>
       <a href="#arts"><i>ARTS</a></i>
       <a href="#culture"><i>CULTURE</a></i>
       <a href="#politics"><i>POLITICS</a></i>
