--- a/data-viz-project/index.html
+++ b/data-viz-project/index.html
@@ -47,11 +47,11 @@
         <h1>THE SUSPECTS WORE LOUBOUTINS</h1>
 
           <div class="description">
-            <p><b>The most audacious burglary gang in recent Hollywood history—accused of stealing more than $3 million in clothing and jewelry from Paris Hilton, Lindsay Lohan, and other stars—appears to be a bunch of club-hopping Valley kids, motivated by vanity and celebrity-worship.</p></b>
+            <b>The most audacious burglary gang in recent Hollywood history—accused of stealing more than $3 million in clothing and jewelry from Paris Hilton, Lindsay Lohan, and other stars—appears to be a bunch of club-hopping Valley kids, motivated by vanity and celebrity-worship.</b>
           </div>
 
         <div class="byline">
-          BY: NANCY JO SALES
+          BY: NANCY JO SALES<hr>
         </div>
 
         <p>Alexis Neiers told cops that she and Nick Prugo had been drinking at Beso, a trendy bar-restaurant on Hollywood Boulevard, when Prugo got a call from Rachel Lee telling him to come and meet her.
@@ -77,6 +77,8 @@
         <p>The L.A.P.D.’s report on the Bling Ring states that Nick Prugo told cops that Rachel Lee—a Korean-American girl from Calabasas, a wealthy suburb in the Valley— was “the driving force of the burglary crew and that her motivation was based on her desire to own the designer wardrobes of the Hollywood celebrities she admired.” Charged in the case are Neiers; Prugo; Lee; Tamayo; their friend Courtney Ames, 19; and Roy Lopez Jr., 27, a bouncer Ames knew from a waitressing job. (All have pleaded not guilty, except for Lee, whose arraignment was pending at press time.)</p><br>
 
         <p>Between October of 2008 and August of 2009, the alleged members of the Bling Ring collectively stole more than $3 million in jewelry and high-end designer goods from a number of Young Hollywood players: Hilton, Lohan, Patridge (a regular on the reality show The Hills), Bilson (former star of The O.C.), original Beverly Hills 90210 cast member Brian Austin Green and his girlfriend, actress Megan Fox. They are said to have tried to rob High School Musical’s, Ashley Tisdale too, but fled when discovered by a female houseguest.</p><br>
+
+        <font size="+2"><blockquote> They picked Paris Hilton as their first victim because they figured she was "dumb." </blockquote></font><br>
 
         <p>The thieves apparently had a taste for luxury brands: Chanel, Gucci, Tiffany, Cartier, Prada, Marc Jacobs, Dolce & Gabbana, Burberry, Yves Saint Laurent. They allegedly stole clothes, shoes, handbags, makeup, perfume, underwear. They also took Green’s Sig Sauer .380 semi-automatic handgun.</p><br>
 
@@ -127,6 +129,8 @@
         <p>Around this time, Prugo said, he was also becoming estranged from his parents, Melva-Lynn and Frank, a senior vice president at IM Global, a film-and-television sales-and-distribution company, and the foreign sales agent for the low-budget blockbuster Paranormal Activity. “Me and my parents had a falling-out,” Prugo said, not wishing to elaborate. “I can’t blame them. Whatever I’ve done, it’s my responsibility.”</p><br>
 
         <p>He said that he and his new friend, Lee, “bonded over fashion. I like fashion, I like clothes. I like to think that I’m a stylish guy.” He dreamed of designing his own line, as did Lee, who talked about attending the Fashion Institute of Design and Merchandising in L.A. “A lot of the Hills girls went there.”</p><br>
+
+        <font size="+2"><blockquote>He says he sold Orlando Bloom’s Rolexes to Johnny Ajar—a.k.a. “Johnny Dangerous."</blockquote></font><br>
 
         <p>Throughout the 10th grade, Prugo said, they were a couple of “carefree kids,” “smoking weed, hanging out at Zuma Beach, going to parties with a lot of under-age kids doing beer pong.” And then, that summer, things started to change, when Prugo said Lee proposed they rob the house of a boy in Woodland Hills whom Prugo knew to be out of town. “I’m like, O.K., whatever, just wanting to please her.”</p><br>
 
