addition of blockquote

--- a/data-viz-project/index.html
+++ b/data-viz-project/index.html
@@ -148,7 +148,7 @@
 
         <p>One night in October of 2008, he says, he and Lee entered Hilton’s sprawling tile-roofed mansion in a gated community in the Hollywood Hills, opening the front door with a key they had found under the mat. “Stupid,” Prugo said, shrugging. He said he found the sensation of suddenly being in Hilton’s home “horrifying. There was that percentage of ‘Wow, this is Paris Hilton’s house,’ but as soon as I put my foot in the door I was just wanting to run out.”</p><br>
 
-        
+        <font size="+2"><blockquote>Prugo found the sensation of suddenly being in Hilton's home "horrifying."</blockquote></font><br>
 
         <p>He says he served as a lookout at the top of the stairs while Lee went into Hilton’s bedroom to search for valuables. “I was sweating unnaturally. Every five minutes, I was yelling, Let’s get the fuck out of here. She was like, It’s fine, it’s fine, let’s keep going.”</p><br>
 
@@ -173,6 +173,8 @@
         <p>Alexis’s “dysfunctional background” was the reason why, she said, she “related so well” to Tess Taylor, who sometimes also lives in the Neiers-Dunn household. Taylor, 20, a Playboy Cyber Girl, is still being investigated for her role in the Bling Ring burglaries, according to sources in the L.A.P.D. Taylor’s lawyer, Jeffery Rubenstein, had no comment.</p><br>
 
         <p>Alexis met Taylor (a stage name; her real name is Adler), a dark-haired bombshell, in ballet class when they were toddlers. “We took her in” six years ago, Alexis said. “My mom kinda fell off the face of the planet,” Taylor said on the phone. She said she doesn’t know where her mother is. “I feel like she’s my other half,” said Alexis, “I love to go out and dance with my sister.” They can also be seen making out with each other in the straight-to-DVD teen flick Frat Party.</p><br>
+
+        <font size="+2"><blockquote>“Rachel's biggest conquest was Lindsay Lohan... her ultimate fashion icon," says Prugo.</blockquote></font><br>
 
         <p>It was their ubiquity on the Hollywood club scene that got E! interested in the girls for their reality show, tentatively titled Pretty Wild, last year. The pilot—which airs in March; unfortunately, I may be in it, having been around while they were filming— includes a wild night in which Alexis and Taylor hit the club Wonderland in Hollywood with their friend rapper Mickey Avalon. “He’s such an awesome guy!” Alexis says.</p><br>
 
