addition of timeline

--- a/data-viz-project/index.html
+++ b/data-viz-project/index.html
@@ -196,6 +196,8 @@
 
         <h2>“The Beautiful, Gorgeous Things”</h2>
 
+          <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1DUqPHyJG3Bli07I5ZxEyCKYbjUXUL2smkAeoQIMbnfU&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='600' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
+
         <p>By the beginning of 2009, the Bling Ring was in full escalation mode. “While this activity started as a twisted adventure for Prugo and his small group of friends fueled by celebrity worship,” says the L.A.P.D. report, “it quickly mushroomed into an organized criminal enterprise.”</p><br>
 
         <p>Between October and December of 2008 there had been four more burglaries of Hilton’s house. By February there were allegedly more people involved: Diana Tamayo, president of the class of 2008 at Indian Hills, an illegal Mexican immigrant, according to cops, voted “Best Smile,” and Courtney Ames, an old friend of Lee’s who went to Calabasas High School and whose stepfather is famed welterweight Randy Shields. “Wanna smoke a bluuunt,” Ames wrote on her Facebook page in November.</p><br>
