css changes to image and captions

--- a/data-viz-project/index.html
+++ b/data-viz-project/index.html
@@ -122,6 +122,12 @@
 
         <h2>Nick and Rachel</h2>
 
+          <figure>
+            <img src="Rachel.jpg" alt="Picture of Rachel Lee and Nick Prugo" class="center" width=100%><br>
+            <figcaption><b>Rachel Lee (left) and Nick Prugo (right) pictured together. Both Lee and Prugo were the masterminds of the Bling Ring, with Lee being the group's main ringleader.
+              <em>(SOURCE: Pinterest)</b></em></figcaption>
+          </figure>
+
         <p>Nick Prugo met Rachel Lee in 2006 at Indian Hills, where he had transferred after being kicked out of Calabasas High School for excessive absences. He was a troubled kid who had been diagnosed with A.D.H.D., for which he was prescribed Concerta, and “anxiety issues,” for which he was given Zoloft. He said that Lee was “the first person I felt was, like, my best friend.” They became “inseparable,” in constant contact, phoning, IMing, texting.</p><br>
 
         <p>She was a fashionable girl whom Prugo and Neiers describe as “spoiled” and “haughty.” She had troubles of her own; apparently she didn’t get along with her mother, Vickie Kwon, a North Korean immigrant and owner of two centers of the tutoring company Kumon. Prugo claims, “Rachel hates her stepfather,” whom her mother married when Lee was in her early teens. (Neither Lee nor Kwon responded to requests for comment.)</p><br>
@@ -161,6 +167,12 @@
         <p>“I don’t know why anyone would listen to allegations made by a self-confessed thief,” said Dawn Miller, a rep for Hilton.</p><br>
 
         <h2>My So-Called Real Life</h2>
+
+        <figure>
+          <img src="Alexis.png" alt="Picture of Alexis Neiers" class="center" width=100%><br>
+          <figcaption><b>A film still from 'Pretty Wild,' an American reality telvision series starring Bling Ring member Alexis Neiers.
+            <em>(SOURCE: In Touch Weekly)</b></em></figcaption>
+        </figure>
 
         <p>At Alexis Neiers’s home in Westlake Village on the afternoon of her arraignment, the E! reality crew was filming a scene in which Neiers’s parents recount for their younger daughter, Gabrielle, what happened in court that day. Neiers’s mother, Andrea Arlington Dunn, and father, Mikel Neiers, stood in the living room, taking direction from E! supervising producer Gennifer Gardiner, who was feeding them lines: “Tell her, ‘Everything’s going to be O.K., Gabby.’” </p><br>
 
