nick prugo photo

--- a/data-viz-project/index.html
+++ b/data-viz-project/index.html
@@ -88,6 +88,12 @@
 
         <h2>The Rat</h2>
 
+        <figure>
+          <img src="Nick.jpg" alt="Picture of Nick Prugo" class="center" width=100%><br>
+          <figcaption><b>Nick Prugo (right) pictured during the Bling Ring's trial.
+            <em>(SOURCE: DISTRACTIFY)</b></em></figcaption>
+        </figure>
+
         <p>Nick Prugo has a different take on the events of the night of the Bloom burglary. “We didn’t even go to Beso that night,” he said. A slender boy with an angular face and small brown eyes, he was sitting in front of the fire at the Encino home of his lawyer, Sean Erenstoft, on a rainy night in December.</p><br>
 
         <p>Charged with seven counts of residential burglary, each bringing a possible sentence of two to six years, Prugo is potentially facing serious time. In October, he confessed to police without first getting a deal. For weeks after he was arrested, on September 17 (after being fingered by a tipster), he denied everything; but then, he says, he was finding it difficult to breathe, sleep, eat—“I was even losing my hair.”</p><br>
@@ -124,7 +130,7 @@
 
           <figure>
             <img src="Rachel.jpg" alt="Picture of Rachel Lee and Nick Prugo" class="center" width=100%><br>
-            <figcaption><b>Rachel Lee (left) and Nick Prugo (right) pictured together. Both Lee and Prugo were the masterminds of the Bling Ring, with Lee being the group's main ringleader.
+            <figcaption><b>Rachel Lee (left) and Nick Prugo (right) pictured together. Both Lee and Prugo were the masterminds of the "Bling Ring,"" with Lee serving as the group's main ringleader.
               <em>(SOURCE: Pinterest)</b></em></figcaption>
           </figure>
 
