--- a/data-viz-project/index.html
+++ b/data-viz-project/index.html
@@ -91,7 +91,7 @@
         <figure>
           <img src="Nick.jpg" alt="Picture of Nick Prugo" class="center" width=100%><br>
           <figcaption><b>Nick Prugo (right) pictured during the Bling Ring's trial.
-            <em>(SOURCE: DISTRACTIFY)</b></em></figcaption>
+            <em>(SOURCE: GETTY IMAGES)</b></em></figcaption>
         </figure>
 
         <p>Nick Prugo has a different take on the events of the night of the Bloom burglary. “We didn’t even go to Beso that night,” he said. A slender boy with an angular face and small brown eyes, he was sitting in front of the fire at the Encino home of his lawyer, Sean Erenstoft, on a rainy night in December.</p><br>
