--- a/data-viz-project/index.html
+++ b/data-viz-project/index.html
@@ -242,6 +242,12 @@
 
         <h2>The Sting</h2>
 
+        <figure>
+          <img src="group.jpg" alt="Picture of Bling Ring members" class="center" width=100%><br>
+          <figcaption><b>All the members of the notorious Bling Ring.
+            <em>(SOURCE: VULTURE)</b></em></figcaption>
+        </figure>
+
         <p>But Rachel Lee couldn’t resist pulling off one last heist, Prugo said: “Rachel’s, like, biggest conquest was Lindsay Lohan. It was her ultimate fashion icon.”</p><br>
 
         <p>Lee returned to L.A. from Vegas and, on the night of August 23, Prugo, Lee, and Tamayo allegedly burglarized Lohan’s Spanish-style home in the Hollywood Hills of close to $130,000 in clothes and jewelry. Lee and Tamayo were, “like, freaking out over Lindsay’s stuff,” Prugo said. “I didn’t even want to go to Lindsay’s, because I had a feeling if anything was taken,” in the way of surveillance videos, “it would be released.”</p><br>
