--- a/data-viz-project/index.html
+++ b/data-viz-project/index.html
@@ -230,6 +230,8 @@
 
         <p>The stuff, the designer goods—as Prugo said, “the beautiful, gorgeous things, like Marc Jacobs, Gucci, Yves Saint Laurent”—was accumulating, and, according to Prugo, the kids were wearing it around the Valley and to Hollywood clubs. “Diana’s, like, entire personal wardrobe was made up of clothing she stole,” he said. “Patently false,” said her lawyer, Howard Levy. Tamayo has been charged with two counts of residential burglary of Lohan’s home and the attempted burglary of Ashley Tisdale’s.</p><br>
 
+          <img src="map2.png" alt="Map of Bling Ring's Victims Locations" class="center" width=100%><br>
+
         <p>The kids seemed to be insatiable—and fearless. They allegedly kept on robbing even after Audrina Patridge posted the surveillance video, believed to be of Lee and Prugo, on her Web site in February. Patridge had hoped that someone would come forward to identify the thieves, but, miraculously, no one did, even though the video was picked up by TMZ and ran on L.A.’s local news stations.</p><br>
 
         <p>“I was watching KTLA and I saw us and I just broke down,” Prugo said. “Rachel made it seem like it was O.K.”</p><br>
@@ -263,6 +265,8 @@
         <p>“Lee asked Detective [Leanne] Hoffman,” of the L.A.P.D., “if she had spoken to the victims. Hoffman replied that she had spoken to all of the victims. Lee became excited and asked, ‘What did Lindsay say?’”</p><br>
 
         <p>Lee has been charged with three counts of residential burglary of the homes of Lindsay Lohan, Paris Hilton, and Audrina Patridge.</p><br>
+
+          <img src="chart.png" alt="Bar Graph Showing Total Amount of Stolen Goods" class="center" width=100%><br>
 
         <h2>Postscript</h2>
 
