--- a/data-viz-project/index.html
+++ b/data-viz-project/index.html
@@ -280,6 +280,11 @@
 
         <p>He was wearing a pair of good-looking shoes, shiny black sneakers. I asked him where he got them. “A thrift store,” he said ruefully. “Thirteen bucks.”</p><br>
 
+        <footer>
+          <p>©2021 CONDÉ NAST. ALL RIGHTS RESERVED.</p>
+          <p>Use of and/or registration on any portion of this site constitutes acceptance of our User Agreement (updated 1/1/20) and Privacy Policy and Cookie Statement (updated 1/1/20). Your CA Privacy Rights The material on this site may not be reproduced, distributed, transmitted, cached, or otherwise used, except with the prior written permission of Condé Nast.</p>
+        </footer>
+
 
       </div>
 
